--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		 for(i=1;  i<b ; i++){
 		 result *= a;
 		 }
-		 return result;
-		 
+		 return result; //возвращает результат
 	}
 	a = prompt("введите число a");
 	b = prompt("введите число b");
