--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		 for(i=1;  i<b ; i++){
 		 result *= a;
 		 }
-		 return result; //возвращает результат
+		 return result; //возвращает результат 123
 	}
 	a = prompt("введите число a");
 	b = prompt("введите число b");
